# apertium-nci

./: Makefile.am  README  apertium-nci.nci.lexc  apertium-nci.nci.mor.twol  apertium-nci.nci.phon  apertium-nci.nci.spellrelax  apertium-nci.nci.twol  apertium-nci.pc.in  configure.ac  modes.xml
dev/: andrews.tsv
test/: analysis-input.txt  analysis-morph-expected.txt  analysis-morph-output.txt  tests.json
